Zebra Change Log

Trunk (unreleased changes)

  INCOMPATIBLE CHANGES
    PIG-1099 Changed version number to be 0.7.0 to match Pig version number
	change (yanz via gates)

  IMPROVEMENTS

	PIG-1074 Zebra store function should allow '::' in column names in output
	schema (yanz via gates)

    PIG-1077 Support record(row)-based file split in Zebra's
	TableInputFormat (chaow via gates)

    PIG-1089 Use Pig's version for Zebra's own versi (chaow via olgan)

    PIG-1069  Order Preserving Sorted Table Union (yanz via gates)

    PIG-997 Sorted Table Support by Zebra (yanz via gates)
  	
	PIG-996 Add findbugs, checkstyle, and clover to zebra build file (chaow via
	        gates)

	PIG-993 Ability to drop a column group in a table (yanz and rangadi via gates)

    PIG-992 Separate schema related files into a schema package (yanz via
	gates)

  OPTIMIZATIONS

  BUG FIXES

    PIG-1095: Schema support of anonymous fields in COLECTION fails (yanz via
	gates)

    PIG-1078: merge join with empty table failed (yanz via gates)

    PIG-1091: Exception when load with projection of map keys on a map column
	that is not map split (yanz via gates).

    PIG-1026: [zebra] map split returns null (yanz via pradeepkth)

	PIG-1057 Zebra does not support concurrent deletions of column groups now
	(chaow via gates).

	PIG-944  Change schema to be taken from StoreConfig instead of
	TableStorer's constructor (yanz via gates).

    PIG-918. Fix infinite loop only columns in first column group are
    specified. (Yan Zhou via rangadi)
 
    PIG-949. If an entire map is placed in non default column group, 
    and a specific key placed in another CG, the second CG did not 
    work as expected. (Yan Zhou, Jing Huang (tests) via rangadi)

    PIG-987. Access control for column groups. Users can specifify
    desired group, owner, and, permissions for a column group.
    (Yan Zhou via rangadi)
    
    PIG-991. Various minor bugs. (Yan Zhou via rangadi)
