@@ -8,6 +8,8 @@ Trunk (unreleased changes)
 
   IMPROVEMENTS
 
+    PIG-1098 Zebra Performance Optimizations (yanz via gates)
+
 	PIG-1074 Zebra store function should allow '::' in column names in output
 	schema (yanz via gates)
 
